[package]
name = "fugle"
version = "0.3.5"
authors = ["tommady <tommady@users.noreply.github.com>"]
description = "A Simple, Lightweight, Fast and Safe Fugle Library"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tommady/fugle-rs"
repository = "https://github.com/tommady/fugle-rs"
keywords = ["fugle", "stock"]
categories = ["web-programming::http-client", "web-programming::websocket"]
edition = "2021"

[features]
default = []
websocket = ["tungstenite", "log"]

[package.metadata.docs.rs]
features = ["websocket"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.4", features = ["json"] }
time = { version = "0.3", features = ["serde", "parsing"] }
log = { version = "0.4", optional = true }

[dependencies.tungstenite]
version = "0.17"
default-features = false
features = ["rustls-tls-webpki-roots"]
optional = true
