[package]
name = "fugle"
version = "0.3.6"
authors = ["tommady <tommady@users.noreply.github.com>"]
description = "A Simple, Lightweight, Fast and Safe Fugle Library"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tommady/fugle-rs"
repository = "https://github.com/tommady/fugle-rs"
keywords = ["fugle", "stock"]
categories = ["web-programming::http-client", "web-programming::websocket"]
edition = "2021"

[features]
default = []
websocket = ["tungstenite", "log"]
async-websocket = ["tungstenite", "tokio-tungstenite", "log", "tokio", "futures-util"]

[package.metadata.docs.rs]
features = ["websocket", "async-websocket"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.4", features = ["json"] }
time = { version = "0.3", features = ["serde", "parsing"] }
log = { version = "0.4", optional = true }
futures-util = { version = "0.3", default-features = false, optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync"], optional = true }

[dependencies.tungstenite]
version = "0.17"
default-features = false
features = ["rustls-tls-webpki-roots"]
optional = true

[dependencies.tokio-tungstenite]
version = "0.17"
features = ["rustls-tls-webpki-roots"]
optional = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
serial_test = "0.7"
