[package]
name = "fugle"
version = "0.3.8"
authors = ["tommady <tommady@users.noreply.github.com>"]
description = "A Simple, Lightweight, Fast and Safe Fugle Library"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tommady/fugle-rs"
repository = "https://github.com/tommady/fugle-rs"
keywords = ["fugle", "stock"]
categories = ["web-programming::http-client", "web-programming::websocket"]
edition = "2021"

[features]
default = ["query"]
query = ["ureq"]
async-query = ["reqwest"]
websocket = ["tungstenite", "log", "serde_json"]
async-websocket = ["tungstenite", "tokio-tungstenite", "log", "tokio", "futures-util", "serde_json"]

[package.metadata.docs.rs]
features = ["websocket", "async-websocket", "query", "async-query"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["serde", "parsing"] }
rust_decimal = "1.26"

ureq = { version = "2.4", features = ["json"], optional = true }
serde_json = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }
futures-util = { version = "0.3", default-features = false, optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync"], optional = true }

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls-webpki-roots"]
optional = true

[dependencies.tungstenite]
version = "0.17"
default-features = false
features = ["rustls-tls-webpki-roots"]
optional = true

[dependencies.tokio-tungstenite]
version = "0.19"
features = ["rustls-tls-webpki-roots"]
optional = true

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
serial_test = "2.0"
